5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_2447.log
== SUBMITION (2019-04-11 18:47:34) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print("Falta X"),(round(X,2))
else:
	print("Troco de Y"), (round(Y,2))
-- EXECUTION TIME:
0.231017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print("Falta X"),(round(X,2))
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:47:38) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print("Falta X"),(round(X,2))
else:
	print("Troco de Y"), (round(Y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Falta X"),(round(X,2))
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:48:07) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print("Falta"),(round(X,2))
else:
	print("Troco de"), (round(Y,2))
-- EXECUTION TIME:
0.147431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print("Falta"),(round(X,2))
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:48:19) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print("Falta"),(round(x,2))
else:
	print("Troco de"), (round(y,2))
-- EXECUTION TIME:
0.15503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print("Falta"),(round(x,2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:20) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print("Falta"),(round(x,2))
else:
	print("Troco de"), (round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Falta"),(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:48:57) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"), (round(y,2)))
-- EXECUTION TIME:
0.165623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print(("Falta"),(round(x,2)))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:59) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"), (round(y,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(("Falta"),(round(x,2)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:49:23) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"),(round(y,2)))
-- EXECUTION TIME:
0.15274
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print(("Falta"),(round(x,2)))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:49:28) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"),(round(y,2)))
-- EXECUTION TIME:
0.155746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    print(("Falta"),(round(x,2)))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:28) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"),(round(y,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(("Falta"),(round(x,2)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:50:24) 
-- CODE:
preco=float(input("digite o preco"))
pagamento=float(input("digite o pagamento"))
x=preco-pagamento
y=pagamento-preco
if (preco>pagamento):
	print(("Falta"),(round(x,2)))
else:
	print(("Troco de"),(round(y,2)))
-- EXECUTION TIME:
0.15459
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
